--- a/radio/src/translations/nl.h.txt
+++ b/radio/src/translations/nl.h.txt
@@ -1142,6 +1142,7 @@
 #define TR_SCALE               "Schaal"
 #define TR_VIEW_CHANNELS       "Toon Kanalen"
 #define TR_VIEW_NOTES          "Toon Notities"
+#define TR_ENTER_DFU           "DFU mode"
 #define TR_MODEL_SELECT        "Model Select"
 #define TR_MODS_FORBIDDEN      "Wijzigen niet toegestaan!"
 #define TR_UNLOCKED            "Vrijgegeven"
