--- a/radio/src/translations/es.h.txt
+++ b/radio/src/translations/es.h.txt
@@ -1147,6 +1147,7 @@
 #define TR_SCALE               "Scale"
 #define TR_VIEW_CHANNELS       "View Channels"
 #define TR_VIEW_NOTES          "View Notes"
+#define TR_ENTER_DFU           "DFU mode"
 #define TR_MODEL_SELECT        "Model Select"
 #define TR_MODS_FORBIDDEN      "Modifications forbidden!"
 #define TR_UNLOCKED            "Unlocked"
