--- a/radio/src/translations/es.h.txt
+++ b/radio/src/translations/es.h.txt
@@ -1059,8 +1059,8 @@
 #define TR_SCRIPT              "Script"
 #define TR_INPUTS              "Inputs"
 #define TR_OUTPUTS             "Outputs"
-#define TR_EEBACKUP            "\004[ENTER Long] to backup the EEPROM"
-#define TR_FACTORYRESET        "\012[MENU Long]: Factory reset"
+#define TR_EEBACKUP            "Backup the EEPROM"
+#define TR_FACTORYRESET        "Factory reset"
 #define TR_CONFIRMRESET        "Erase ALL models and settings?"
 #define TR_TO_MANY_LUA_SCRIPTS "Too many Lua scripts!"
 
