--- a/radio/src/translations/pl.h.txt
+++ b/radio/src/translations/pl.h.txt
@@ -1049,8 +1049,8 @@
 #define TR_SCRIPT              "Skrypt"
 #define TR_INPUTS              "Wejścia"
 #define TR_OUTPUTS             "Wyjścia"
-#define TR_EEBACKUP            "\012[ENTER Długo] Backup EEPROMu"
-#define TR_FACTORYRESET        "\012[MENU Long]: Ustaw.Fabrycz"
+#define TR_EEBACKUP            "Backup EEPROMu"
+#define TR_FACTORYRESET        "Ustaw.Fabrycz"
 #define TR_CONFIRMRESET        "WYkasować wszytkie modele?    "
 #define TR_TO_MANY_LUA_SCRIPTS "Za dużo skryptów Lua!"
 
