--- a/radio/src/translations/en.h.txt
+++ b/radio/src/translations/en.h.txt
@@ -248,7 +248,7 @@
   #define TR_VVARIO                    "[Vario]\0  "
 #endif
 
-#if defined(AUDIO) || defined(BUZZER)
+#if defined(AUDIO) || defined(PCBI6X)
   #define TR_SOUND                     "Play Sound"
 #else
   #define TR_SOUND                     "Beep\0     "
