Use distinct names for AFHDS2A GPS coords sensors (port: https://github.com/EdgeTX/edgetx/pull/4063)

--- a/radio/src/translations/fr.h.txt
+++ b/radio/src/translations/fr.h.txt
@@ -1280,7 +1280,9 @@
 #define ZSTR_CELLS                     "Cels"
 #define ZSTR_GPSALT                    "GAlt"
 #define ZSTR_GPSDATETIME               "Date"
-#define ZSTR_GPS                       "GPS"
+#define ZSTR_GPS               "GPS"
+#define ZSTR_GPS_LAT           "GLat"
+#define ZSTR_GPS_LON           "GLon"
 #define ZSTR_BATT1_VOLTAGE             "RB1V"
 #define ZSTR_BATT2_VOLTAGE             "RB2V"
 #define ZSTR_BATT1_CURRENT             "RB1A"
